bin/testsuite/tests/compiler/src/errors/compiler421.swg
#global testerror "Err0017"
//#[Swag.PrintBc]
#test
{
    const d: s32 = 666
    d = 20
}
